overflow fixed, media queries added

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* position: relative; */
     background: linear-gradient(lightgray, white);    
     overflow-x: hidden;
 }
@@ -11,7 +11,6 @@ body {
 }
 /* Grid */
 #container {
-    /* z-index: 0; */
     display: grid;
     grid-template-columns: 5% 40% 10% 40% 5%;
     grid-template-rows: 1fr;
@@ -126,8 +125,8 @@ body {
     display: flex;
     position: absolute;
     top: 10%;
-    transform: translateX(-100vw);
-    transition: 0.8s ease;
+    transform: translateX(-200vw);
+    transition: transform 0.8s ease;
     width: 89vw;
     /* border: 1px solid black; */
     flex-wrap: wrap;
@@ -151,7 +150,7 @@ body {
     margin-left: 2em;
     margin-right: 2em;
 }
-#port_container h3 {
+#port_container h2 {
     font-family: sans-serif;
 }
 .first_work {
@@ -203,8 +202,8 @@ body {
     display: flex;
     position: absolute;
     top: 18%;
-    transform: translateX(100vw);
-    transition: 0.8s ease;
+    transform: translateX(200vw);
+    transition: transform 0.8s ease;
     width: 89vw;
     /* border: 1px solid black; */
     flex-wrap: wrap;
@@ -237,6 +236,43 @@ body {
     margin-right: 1em;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
+    #port_container {
+        top: 5%;
+    }
+    #port_container img {
+        margin-bottom: 0.5em;
+    }
+    #port_container p {
+        text-align: center;
+    }
+
+    /* about_container */
+    #about_container {
+        top: 5%;
+    }
+    body {
+        /* background: linear-gradient(lightgray, white); */
+        background: no-repeat; 
+    }
+    .flex_row {
+        display: flex;
+        flex-direction: column;
+    }
+    .flex_row h2, .flex_row p {
+        text-align: center;
+    }
+    .flex_row h2 {
+        margin-bottom: 0.5em;
+    }
+    .flex_row #profile_img, #other_img {
+        margin-top: 1.5em;
+        margin-bottom: 1.5em;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .flex_row #profile_img {
+        order: 1;
+    }
     
 }
